<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SalesApp</string>
    <string name="login">Iniciar sesión</string>
    <string name="user">E-mail</string>
    <string name="pass">Contraseña</string>
    <string name="img_content">img_content</string>
    <string name="text_boton_login">Continuar</string>
    <string name="forgot_pass"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="name">SalesApp</string>
    <string name="name_menu">Name Name Name Name</string>
    <string name="module_v">Ventas</string>
    <string name="module_c">Clientes</string>
    <string name="module_p">Productos</string>
    <string name="module_i">Inventario</string>
    <string name="name_btn">Logout</string>
    <string name="state">Conectado</string>
    <string name="name_p">Productos agregados</string>
    <string name="add">Agregue sus productos</string>
    <string name="ls_add">Productos</string>
    <string name="siguiente">Siguiente</string>
    <string name="regresar">Regresar</string>
    <string name="rellenoid">001</string>
    <string name="relleno_precio">5.000</string>
    <string name="relleno_pre2">$</string>
    <string name="total">Total:</string>
    <string name="search">Buscar</string>
    <string name="facturar">Facturar</string>
    <string name="pa">PA: 2</string>
    <string name="datos_c">Datos del cliente</string>
    <string name="add_p">Agregar producto</string>
    <string name="add_c">Agregar cliente</string>
    <string name="hint_id">Identificacion</string>
    <string name="hint_id_p">ID</string>
    <string name="hint_c">Nombre del cliente</string>
    <string name="hint_p">Nombre del producto</string>
    <string name="hint_p_cantidad">Cantidad</string>
    <string name="hint_p_precio">Precio</string>
    <string name="inventario">Lista Inventario</string>
    <string name="btn_guardar">Guardar</string>
    <string name="txt_nombre_c">Nombre de cliente</string>
    <string name="txt_telefono">Numero de telefono</string>
    <string name="title_activity_inicio">inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
