<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrade_menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="150dp"
            android:layout_marginTop="80dp"
            app:srcCompat="@drawable/ic_hombre"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/img_content"/>

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:layout_marginStart="23dp"
            android:layout_marginTop="10dp"
            android:text="@string/name_menu"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:layout_marginStart="150dp"
            android:text="@string/state"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/nunito"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/module_v"
            android:textSize="25sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/nunito"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/module_p"
            android:textSize="25sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/nunito"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/module_c"
            android:textSize="25sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/nunito"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/module_i"
            android:textSize="25sp"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/name_btn"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="130dp"
            android:backgroundTint="@color/blue_dark"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>