<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="399dp"
        android:layout_height="150dp"
        android:contentDescription="@string/img_content"
        android:src="@drawable/img_login"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"

            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="30sp" />



            <EditText
                android:id="@+id/field_user"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="5dp"
               android:drawableLeft="@drawable/ic_user"
                android:autofillHints="@string/user"
                android:hint="@string/user"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_dark"
                android:background="@drawable/corner_field"/>





            <EditText
                android:id="@+id/field_pass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="10dp"
                android:autofillHints="@string/pass"
                android:background="@drawable/corner_field"
                android:drawableLeft="@drawable/ic_pass"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_dark" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="30dp"
            android:background="@drawable/corner_button"
            android:drawableEnd="@drawable/ic_arrow"
            android:text="@string/text_boton_login"
            android:textColor="@color/black"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/btn_forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/forgot_pass"
            android:textColor="@color/blue_clear"
            android:textSize="20sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>