<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Productos2">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito"
        android:text="@string/add_p"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id_producto"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/user"
        android:background="@drawable/corner_field"
        android:fontFamily="@font/nunito"
        android:hint="@string/hint_id_p"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/nombre_producto"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="44dp"
        android:autofillHints="@string/user"
        android:background="@drawable/corner_field"
        android:fontFamily="@font/nunito"
        android:hint="@string/hint_p"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_producto"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/cantidad_producto"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="44dp"
        android:autofillHints="@string/user"
        android:background="@drawable/corner_field"
        android:fontFamily="@font/nunito"
        android:hint="@string/hint_p_cantidad"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_producto"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/precio_producto"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="44dp"
        android:autofillHints="@string/user"
        android:background="@drawable/corner_field"
        android:fontFamily="@font/nunito"
        android:hint="@string/hint_p_precio"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cantidad_producto"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/guardar_producto"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="30dp"
        android:backgroundTint="@color/blue_clear"
        android:fontFamily="@font/nunito"
        android:text="@string/btn_guardar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precio_producto"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>