<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <FrameLayout
        android:layout_width="420dp"
        android:layout_height="65dp"
        android:background="@drawable/color_recyclerview"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="415dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tex_nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:fontFamily="@font/nunito"
                    android:layout_marginStart="30dp"
                    android:layout_toRightOf="@+id/layout"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tex_cantidad"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:fontFamily="@font/nunito"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/layout"
                    android:text="@string/hint_p_cantidad"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:typeface="serif" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/nunito"
                        android:layout_marginLeft="1dp"
                        android:layout_toRightOf="@+id/layout"
                        android:text="ID:"
                        android:textColor="@color/red"
                        android:textSize="15sp"
                        android:typeface="monospace"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/tex_id"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/nunito"
                        android:layout_marginLeft="1dp"
                        android:layout_toRightOf="@+id/layout"
                        android:text="@string/rellenoid"
                        android:textColor="#040404"
                        android:textSize="15sp"
                        android:typeface="serif" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="206dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/nunito"
                        android:layout_marginLeft="1dp"
                        android:layout_toRightOf="@+id/layout"
                        android:text="@string/relleno_pre2"
                        android:textColor="@color/green_dark"
                        android:textSize="20sp"
                        android:typeface="monospace" />

                    <TextView
                        android:id="@+id/tex_precio"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/nunito"
                        android:layout_marginLeft="1dp"
                        android:layout_toRightOf="@+id/layout"
                        android:text="@string/relleno_precio"
                        android:textColor="#040404"
                        android:textSize="20sp"
                        android:typeface="serif" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>